# cliff

./: Pipfile  README.md  pyproject.toml
cliff/: __init__.py  __main__.py  cheatsheet.csv  data_io.py  user_interface.py
tests/: test_cliff.py
