[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "cliff"
dist-name = "cliff"
author = "Gabriel Gore"
author-email = "gabriel59kg@gmail.com"
home-page = "https://github.com/Kilo59/cliff"
requires = ["pandas"]
requires-python = ">=3.6"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 2 - Pre-Alpha",]

[tool.flit.scripts]
cliff = "cliff.__main__:program.run"