[tool.poetry]
name = "cliff"
version = "0.0.1"
description = "Fantasy Football from the comfort of the Command Line"
authors = ["Gabriel <gabriel59kg@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cliff = "cliff.__main__:APP"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
yaspin = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
isort = "^5.4.2"
black = "^19.10b0"
pyint = "^1.1.0"

[tool.isort]
profile="black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
